<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_current">Current</string>
    <string name="title_future">Future</string>
    <string name="title_settings">Settings</string>
    <string name="loading">loading</string>
    <string name="wind_speed">wind_speed</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="error_occurred">error_occured</string>
    <string name="loading_text">loading_text</string>
    <string name="visibility">visibility</string>
    <string name="precipitation">precipitation</string>
    <string name="wind">wind</string>
    <string name="location">Location</string>
    <string name="future">Future</string>
    <string name="timife_inc">timife inc...</string>
    <string name="home">Home</string>
</resources>
