<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.weather.current.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:constraint_referenced_ids="progressBar_loading,textView_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/loading"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_loading"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_condition_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:layout_constraintWidth_percent="0.25"
        tools:src="@drawable/ic_cloud_queue_black_24dp" />

    <TextView
        android:id="@+id/textView_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_condition_icon"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_condition_icon"
        app:layout_constraintVertical_bias="1.0"
        tools:text="25.0\u2103" />

    <TextView
        android:id="@+id/textView_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_temperature"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/textView_temperature"
        app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Feels like 20.4\u2103" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="268dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Patchy rain possible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_description"
        app:layout_constraintVertical_bias="0.405">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:tint="@color/primaryDarkColor"
            app:layout_constraintEnd_toStartOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wind" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:tint="@color/primaryDarkColor"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@id/imageView12"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_precipitation" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:tint="@color/primaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView11"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_visibility_black_24dp" />

        <TextView
            android:id="@+id/textWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/wind"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/textWind"
            app:layout_constraintStart_toStartOf="@+id/textWind"
            app:layout_constraintTop_toBottomOf="@+id/textWind"
            tools:text="SE, 5.3 m/s" />

        <TextView
            android:id="@+id/textPrecipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/precipitation"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView_precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/textPrecipitation"
            app:layout_constraintStart_toStartOf="@+id/textPrecipitation"
            app:layout_constraintTop_toBottomOf="@+id/textPrecipitation"
            tools:text="5 mm" />

        <TextView
            android:id="@+id/textVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/visibility"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/textVisibility"
            app:layout_constraintStart_toStartOf="@+id/textVisibility"
            app:layout_constraintTop_toBottomOf="@+id/textVisibility"
            tools:text=" 20km" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Today"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView_location"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="@+id/textView_location"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>